# SimuHome

./: .gitignore  eval_spec.example.yaml  pyproject.toml
src/: logging_config.py
src/agents/providers/: model_capabilities.py  openai_provider.py
src/cli/: artifact_audit.py  episode_evaluator.py  episode_generator.py  main.py  parallel_model_evaluation.py  sim_parity_guard.py  stop_servers.py
src/dashboard/: __init__.py  router.py
src/dashboard/backend/: __init__.py  dashboard_log_runner.py  runtime.py  wiki.py
src/dashboard/frontend/: dev-control.d.ts  dev-control.js  dev-control.test.ts  dev-control.ts  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
src/dashboard/frontend/src/: ApiExplorerPage.tsx  App.tsx  DashboardLayout.tsx  EvaluationPage.tsx  Layout.tsx  SimulatorPage.tsx  WikiPage.tsx  api.ts  main.tsx  store.ts  theme.ts  ui.tsx
src/pipelines/episode_evaluation/: aggregate_all_results.py  aggregate_results.py  common.py
src/pipelines/episode_evaluation/qt1/: feasible.py  infeasible.py
src/simulator/api/: app.py  routes.py
src/simulator/application/: home_initializer.py
src/simulator/domain/: home.py
tests/: test_logging_config.py
tests/agents/providers/: test_openai_provider.py
tests/cli/: test_artifact_audit_cli.py  test_direct_module_cli.py  test_main_cli.py  test_parallel_model_evaluation.py  test_sim_parity_guard_cli.py  test_sim_parity_guard_parity.py
tests/pipelines/: test_episode_evaluation_judge_errors.py
tests/simulator/api/: test_dashboard_routes.py
(+75 files in other folders)
